fix footer menu display on small screens

--- a/inkston.css
+++ b/inkston.css
@@ -279,3 +279,14 @@ font-size: .875em;
 }
 }
 
+/* list menu style was only applied on big screens */ 
+@media (max-width: 768px){
+.footer-menu ul {
+    list-style: none;
+    margin:0;
+    font-size: .875em;
+}
+.footer-menu ul li {
+    display:inline-block;
+}
+}
